# AI-Adventurer-APP

./: .env.example  .env.prod.example  .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: API-Documentation.md  Dockerfile  Dockerfile.prod  Jetson-Nano-API-Documentation.md  README.md  app.py  pyproject.toml  test_edge_api.py
backend/app/: config.py  models.py  websocket.py
backend/app/domain/: __init__.py  game_logic.py  story_prompts.py
backend/app/integrations/: __init__.py  ollama_client.py
backend/app/routes/: __init__.py  edge.py  events.py  game.py  llm.py  story.py  system.py
backend/app/services/: __init__.py  edge_service.py  event_service.py  llm_service.py  state_store.py  story_service.py  system_service.py
backend/app/utils/: __init__.py  responses.py
backend/tests/: test_event_and_story_routes.py
frontend/: Dockerfile  Dockerfile.prod  README.md  index.html  nginx.prod.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: getConfig.ts  getCurrentEvent.ts  getCurrentStory.ts  getEventHistory.ts  getGameState.ts  getHealth.ts  postEventInput.ts  postGenerateStory.ts  postInjectDemoEvent.ts  postLlmChat.ts  postResetGame.ts  postStartGame.ts  queryKeys.ts
frontend/src/components/ui/: badge.tsx  textarea.tsx
frontend/src/hooks/: useMutation.ts  useQuery.ts
frontend/src/hooks/mutations/: useGenerateStory.ts  useInjectDemoEvent.ts  (+4 more)
frontend/src/lib/: apiClient.ts
frontend/src/pages/: NotFound.tsx
frontend/src/types/: game.ts  index.ts
(+12 files in other folders)
