[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
	"flask>=3.1.2,<4.0.0",
	"flask-cors>=4.0.1,<5.0.0",
	"flask-socketio>=5.3.0,<6.0.0",
	"python-socketio>=5.9.0,<6.0.0",
	"python-engineio>=4.7.0,<5.0.0",
	"eventlet>=0.36.1,<1.0.0",
]

[project.optional-dependencies]
dev = [
	"pytest>=8.3.5,<9.0.0",
]

[project.scripts]
backend = "main:main"
